[gd_scene load_steps=8 format=3 uid="uid://bpqxovj78w7rp"]

[ext_resource type="Theme" uid="uid://dg1ut6ns7mn0y" path="res://themes/base_theme.tres" id="1_jiqd0"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="2_j0mbs"]
[ext_resource type="FontFile" uid="uid://bj2a6lyrkgi3q" path="res://assets/fonts/ChakraPetch-Bold.ttf" id="2_nygdi"]
[ext_resource type="Texture2D" uid="uid://c1mj6s1ngmfn0" path="res://assets/cog.svg" id="3_yra5a"]
[ext_resource type="Texture2D" uid="uid://c6tsxmnpwp5tj" path="res://assets/gmtk2024-logo.png" id="5_w0duu"]

[sub_resource type="LabelSettings" id="LabelSettings_n0283"]
font_size = 50
shadow_size = 6
shadow_color = Color(0, 0, 0, 0.709804)
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wrcxo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jiqd0")
script = ExtResource("2_j0mbs")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.380392)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.5
offset_top = -157.0
offset_right = 276.5
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/margin_bottom = 40

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_nygdi")
theme_override_font_sizes/font_size = 50
text = "SPACE FACTORY"
label_settings = SubResource("LabelSettings_n0283")

[node name="Play" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 26
text = "Start Game"

[node name="Continue" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 26
text = "Continue Game
"

[node name="Exit" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 26
text = "Exit"

[node name="CogShadow" type="Sprite2D" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0, 0, 0, 0.584314)
position = Vector2(502.5, -16)
scale = Vector2(0.158203, 0.158203)
texture = ExtResource("3_yra5a")

[node name="Cog" type="Sprite2D" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
position = Vector2(499.5, -19)
scale = Vector2(0.158203, 0.158203)
texture = ExtResource("3_yra5a")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -84.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Panel2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 30
columns = 2

[node name="LinkButton" type="LinkButton" parent="Panel2/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Icons by Lorc (game-icons.net)"
underline = 1
uri = "https://game-icons.net"

[node name="LinkButton2" type="LinkButton" parent="Panel2/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Icons by Delapouite (game-icons.net)"
underline = 1
uri = "https://game-icons.net"

[node name="LinkButton3" type="LinkButton" parent="Panel2/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "ore.svg by Faithtoken (game-icons.net)"
underline = 1
uri = "https://game-icons.net"

[node name="LinkButton4" type="LinkButton" parent="Panel2/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "SecurityOfficer.png by justinnichol"
underline = 1
uri = "https://opengameart.org/content/starship-security-officer"

[node name="VSeparator" type="VSeparator" parent="Panel2/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_wrcxo")

[node name="GridContainer2" type="GridContainer" parent="Panel2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="LinkButton" type="LinkButton" parent="Panel2/MarginContainer/HBoxContainer/GridContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14
underline = 1
uri = "https://incompetech.com/music/royalty-free/music.html"

[node name="Label" type="Label" parent="Panel2/MarginContainer/HBoxContainer/GridContainer2/LinkButton"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 69.0
grow_horizontal = 2
theme_override_constants/line_spacing = -4
theme_override_font_sizes/font_size = 13
text = "\"Oppressive Gloom\" Kevin MacLeod (incompetech.com)
\"Crypto\" Kevin MacLeod (incompetech.com)
\"Supernatural\" Kevin MacLeod (incompetech.com)
Licensed under Creative Commons: By Attribution 4.0 License
http://creativecommons.org/licenses/by/4.0/"

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_right = 258.0
offset_bottom = 87.0

[node name="MarginContainer" type="MarginContainer" parent="Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel3/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel3/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel3/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Music Volume: "

[node name="MusicVolume" type="HSlider" parent="Panel3/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_jiqd0")
max_value = 1.0
step = 0.05
value = 0.75

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel3/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel3/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Sound Volume:"

[node name="SoundVolume" type="HSlider" parent="Panel3/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.75

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -254.0
offset_bottom = 153.0
grow_horizontal = 0
texture = ExtResource("5_w0duu")
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -254.0
offset_bottom = 153.0
grow_horizontal = 0
texture = ExtResource("5_w0duu")
expand_mode = 1
stretch_mode = 4

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="value_changed" from="Panel3/MarginContainer/VBoxContainer/HBoxContainer/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="Panel3/MarginContainer/VBoxContainer/HBoxContainer2/SoundVolume" to="." method="_on_sound_volume_value_changed"]
